fix: horizontal scroll on mobile devices on a start animation

--- a/src/common/animations.scss
+++ b/src/common/animations.scss
@@ -3,9 +3,13 @@
     filter: blur(100px);
   }
 
+  & [ani-blur-slow] {
+    filter: blur(100px);
+  }
+
   & [ani-blur-and-zoom] {
     filter: blur(100px);
-    transform: scale(1.2);
+    transform: scale(0.8);
   }
 }
 
@@ -19,6 +23,11 @@
     transition: filter 2s ease-out 1s, transform 2s ease-out 1s;
     filter: blur(0);
     transform: scale(1);
+  }
+
+  & [ani-blur-slow] {
+    transition: filter 2s ease-out 1s;
+    filter: blur(0);
   }
 
   & [delay-500ms] {
